--- a/mozevent/www/templates/criar_evento.html
+++ b/mozevent/www/templates/criar_evento.html
@@ -13,8 +13,9 @@
     <textarea placeholder="Descrição do evento"></textarea>
   </label>
 </div>
+      
         <li class="item item-toggle">
-     Evento publico
+     Dia todo
      <label class="toggle toggle-laranjinha">
        <input type="checkbox"checked="">
        <div class="track">
@@ -22,6 +23,7 @@
        </div>
      </label>
   </li>
+      
       <a class="button button-block button-laranjinha" href="#/app/inicio">
   Salvar
 </a>
