--- a/mozevent/www/lib/ionic/css/ionic.css
+++ b/mozevent/www/lib/ionic/css/ionic.css
@@ -5780,7 +5780,7 @@ input, button, select, textarea {
   padding: 7px 10px 7px 0px;
   max-width: 200px;
   width: 35%;
-  color: #fff;
+  color: #444;
   font-size: 16px; }
 
 .placeholder-icon {
