--- a/mozevent/www/templates/menu.html
+++ b/mozevent/www/templates/menu.html
@@ -25,12 +25,18 @@
         <ion-item menu-close href="#/app/calendario">
           Calendario
         </ion-item>
+        <ion-item menu-close href="#app/passport">
+            <p style="float:left;">Passport </p> <p style="font-style: italic; float:left;font-family: 'Open Sans', sans-serif;">(beta)</p>
+        </ion-item>    
         <ion-item menu-close href="#/app/conta">
           Conta
         </ion-item>
         <ion-item menu-close ng-click="login()">
           Sair
         </ion-item>
+        <ion-item menu-close href="#/app/tutorial">
+          DEV:Tutorial
+        </ion-item>  
       </ion-list>
     </ion-content>
   </ion-side-menu>
