--- a/mozevent/www/templates/passport.html
+++ b/mozevent/www/templates/passport.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Calendario">
+<ion-view view-title="Passport">
   <ion-content>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>  
+      <br><br><br><br><br><br><br><br><br><br><br><br><br>  
     <ion-spinner style="padding-left:165px;" icon="android"></ion-spinner>
   </ion-content>
 </ion-view>
