--- a/mozevent/www/css/style.css
+++ b/mozevent/www/css/style.css
@@ -1,3 +1,39 @@
 img {position:relative;z-index:998;}
 .imgwrap {position:relative;width:400px;overflow:hidden;float:left;}
 .img-overlay {z-index:999;background-color:transparent;width:400px;height:400px;position:absolute;top:-200px;left:-200px;border-radius:400px;-moz-border-radius:400px;-webkit-border-radius:400px;border:200px solid white;}
+
+
+.slider {
+  height: 100%;
+}
+.slider-slide {
+  padding-top: 80px;
+  color: #000;
+  background-color: #fff;
+  text-align: center;
+
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+}
+
+#logo {
+  margin: 30px 0px;
+}
+
+#list {
+  width: 170px;
+  margin: 30px auto;
+  font-size: 20px;
+}
+#list ol {
+  margin-top: 30px;
+}
+#list ol li {
+  text-align: left;
+  list-style: decimal;
+  margin: 10px 0px;
+}
+
+.button.ng-hide{
+  display:none;
+}
