Update 09/10  on dashboard

--- a/mozevent/www/templates/inicio.html
+++ b/mozevent/www/templates/inicio.html
@@ -1,30 +1,45 @@
 <ion-view view-title="Dashboard">
   <ion-content>
-    <div class="list">
-
-    <a class="item item-thumbnail-left" href="#">
+    <div class="list card">
+    <ion-item  >
+        
+        
+    <a class="item item-avatar"  href="#">
       <img src="img/2000px-Senac_logo.svg.png">
       <h2>Palestra sobre web aberta</h2>
       <p>Senac Americana</p>
     </a>
-    <a class="item item-thumbnail-left" href="#">
+        <a href="#" class="item item-image">
+    <img src="img/senac_auditorio.jpg">
+  </a>
+    <a class="item item-avatar" href="#">
       <img src="img/logo_politec.jpg">
       <h2>Palestra sobre web aberta</h2>
       <p>Colegio Politec</p>
     </a>
-    <a class="item item-thumbnail-left" href="#">
+        <a href="#" class="item item-image">
+    <img src="img/colegio_politec.jpg">
+        </a>
+    <a class="item item-avatar" href="#">
       <img src="img/fisl.png">
       <h2>WoMoz</h2>
       <p>FISL</p>
     </a>
-    <a class="item item-thumbnail-left" href="#">
+            <a href="#" class="item item-image">
+    <img src="img/fisl.jpg">
+            </a>
+    <a class="item item-avatar" href="#">
       <img src="img/campus-party-brasil-2014-logo.png">
       <h2>Mobile Dev</h2>
       <p>Campus Party</p>
     </a>
-
-    <a class="button button-icon icon ion-plus-circled" href="#/app/criar_evento"></a>
-  
-</div>
+  <a href="#" class="item item-image">
+    <img src="img/campus_party.jpg">
+</a>
+        </ion-item>
+   
+            </div>
+      <a class="button button-icon icon ion-plus-circled" href="#/app/criar_evento"></a>
   </ion-content>
 </ion-view>
+
