--- a/mozevent/www/templates/menu.html
+++ b/mozevent/www/templates/menu.html
@@ -31,7 +31,7 @@
         <ion-item menu-close href="#/app/conta">
           Conta
         </ion-item>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close href="#app/login">
           Sair
         </ion-item>
         <ion-item menu-close href="#/app/tutorial">
