--- a/mozevent/www/templates/login.html
+++ b/mozevent/www/templates/login.html
@@ -1,5 +1,5 @@
-<ion-modal-view>
-  <ion-content style="background:url(img/background.png) center right no-repeat">
+<ion-view hide-nav-bar="true">
+  <ion-content ng-controller="MainController" style="background:url(img/background.png) center right no-repeat">
       
       <img src="img/logo.png" width="300px" height="230px" style="padding-left:65px; padding-top:20px;">
       <br><br><br>
@@ -17,10 +17,10 @@
         </label>
         <label class="item">
             <p>Esqueci a senha</p>
-          <button class="button button-full button-laranjinha" type="submit">Entrar</button>
+            <a class="button button-block button-laranjinha" href="#/app/inicio">Login</a>
             <p style="padding-top:70px; padding-left:60px;">Não tem uma conta? Registrar</p>
         </label>
       </div>
     </form>
   </ion-content>
-</ion-modal-view>
+</ion-view>
